# lbp

./: .gitignore  CMakeLists.txt  main.cpp  old.txt
Objetcs/ImageReader/: ImageReader.cpp  ImageReader.h  PixelDataset.cpp  PixelDataset.h
Objetcs/LbpResult/: LbpResult.cpp  LbpResult.h
Objetcs/PixelSet/: PixelSet.cpp  PixelSet.h
